Moved the debug CSS to different classes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/app.js"></script>
 </head>
 
-<body class="container">
+<body class="container debug">
     <div class="slides">
         <section class="present">
             <h1>First Slide</h1>
