--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <link rel="stylesheet" href="css/slides.css">
 
+    <!-- TODO Do this in YUI -->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
+
     <script src="http://yui.yahooapis.com/3.10.1/build/yui/yui-min.js"></script>
     <script src="js/yui-config.js"></script>
     <script src="js/app.js"></script>
