--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="css/slides.css">
+    <link rel="stylesheet" href="css/themes/default.css">
 
     <!-- TODO Do this in YUI -->
     <!--[if lt IE 9]>
@@ -17,7 +18,7 @@
     <script src="js/app.js"></script>
 </head>
 
-<body class="container debug">
+<body class="container">
     <div class="slides">
         <section class="present">
             <h1>First Slide</h1>
