--- a/src/gallery-slides/tests/demo/index.html
+++ b/src/gallery-slides/tests/demo/index.html
@@ -5,8 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="css/slides.css">
-    <link rel="stylesheet" href="css/themes/default.css">
+    <link rel="stylesheet" href="../../../../css/slides.css">
+    <link rel="stylesheet" href="../../../../css/themes/default.css">
 
     <!-- TODO Do this in YUI -->
     <!--[if lt IE 9]>
