--- a/src/gallery-slides/tests/demo/index.html
+++ b/src/gallery-slides/tests/demo/index.html
@@ -5,9 +5,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="../../../../css/slides.css">
-    <link rel="stylesheet" href="../../../../css/themes/default.css">
-
     <!-- TODO Do this in YUI -->
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
@@ -15,10 +12,10 @@
 
     <script src="http://yui.yahooapis.com/3.10.1/build/yui/yui-min.js"></script>
     <script src="js/yui-config.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/demo.js"></script>
 </head>
 
-<body class="container">
+<body class="container yui3-skin-sam">
     <div class="slides">
         <section>
             <section>
