Added another section with subsections.

--- a/src/gallery-slides/tests/demo/index.html
+++ b/src/gallery-slides/tests/demo/index.html
@@ -54,19 +54,32 @@
         </section>
 
         <section>
-            <h1>Fifth Slide</h1>
-            <p>Sed in condimentum ipsum.</p>
-            <ul>
-                <li>Nunc sed iaculis tellus.</li>
-                <li>Donec in velit vel enim dapibus volutpat.</li>
-            </ul>
-            <p>Ut <u>hendrerit mi</u> sed massa laoreet hendrerit.</p>
+            <section>
+                <h1>Fifth Slide</h1>
+                <p>Sed in condimentum ipsum.</p>
+                <ul>
+                    <li>Nunc sed iaculis tellus.</li>
+                    <li>Donec in velit vel enim dapibus volutpat.</li>
+                </ul>
+                <p>Ut <u>hendrerit mi</u> sed massa laoreet hendrerit.</p>
+            </section>
+
+            <section>
+                <h1>Sixth Slide</h1>
+                <p>Donec sed imperdiet massa.</p>
+                <p>Vestibulum quis lacus urna. Phasellus quam nisi, commodo sed tincidunt sed, scelerisque vel nunc.</p>
+            </section>
         </section>
 
         <section>
-            <h1>Sixth Slide</h1>
-            <p>Donec sed imperdiet massa.</p>
-            <p>Vestibulum quis lacus urna. Phasellus quam nisi, commodo sed tincidunt sed, scelerisque vel nunc.</p>
+            <h1>Seventh Slide</h1>
+            <p>Sed varius vel purus sit amet aliquet.</p>
+            <p>Vestibulum metus ligula, convallis sed mattis at, aliquet quis turpis.</p>
+            <ul>
+                <li>Fusce vulputate ipsum vitae urna feugiat fermentum.</li>
+                <li>Praesent sit amet tincidunt lectus.</li>
+                <li>Vestibulum adipiscing congue laoreet.</li>
+            </ul>
         </section>
     </div>
 </body>
