Started working on the overview plugin.

--- a/src/gallery-slides/tests/demo/index.html
+++ b/src/gallery-slides/tests/demo/index.html
@@ -15,7 +15,7 @@
     <script src="js/demo.js"></script>
 </head>
 
-<body class="container yui3-skin-sam">
+<body class="slides-container yui3-skin-sam">
     <div class="slides">
         <section>
             <section>
